Fix photo overlapping on text issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,8 +51,7 @@ body{
 
 .herophoto{
     display: flex; 
-    flex: 1 1 0;
-    width: 0;
+    flex: 1;
     justify-content: flex-end;
     align-items: center;
 
@@ -65,6 +64,8 @@ body{
 
 img{
     display: flex;
+    max-width:100%;
+    height:auto;
     border-radius: 20px;
 }
 
